# llm-eval-platform

./: .env.backend.example  .env.cpu.example  .env.example  .env.full.example  .env.gpu.example  .gitignore  CLAUDE.md  EC2_DEPLOYMENT_GUIDE.md  MLFLOW_GUIDE.md  NGINX_SETUP.md  README-ollama.md  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.yml  nginx.conf  nginx.conf.example
llm_eval_backend/: .dockerignore  .env.sample  DOCKER.md  Dockerfile  README.md  pyproject.toml  pytest.ini
llm_eval_backend/src/app/: __init__.py  main.py  main.py.bak  main.py.new
llm_eval_backend/src/app/api/: __init__.py  api_schemas.py  models.py  schemas.py
llm_eval_backend/src/app/api/endpoints/: __init__.py  datasets.py  db_models.py  evaluation.py  inferences.py  jsonl_inference.py  jsonl_inference_ui.py  metrics.py  ollama.py  providers.py  proxy.py
llm_eval_backend/src/app/config/: config.py
llm_eval_backend/src/app/core/: batch_evaluation.py  evaluation.py
llm_eval_backend/src/app/metrics/: __init__.py  base.py  bert_score.py  bleu.py  char_f1.py  comet.py  contains_answer.py  correlation.py  exact_match.py  exact_match_figure.py  llm_as_a_judge.py  llm_judge.py  set_f1.py
llm_eval_backend/src/app/utils/: __init__.py  app_logging.py  datetime_helper.py  job_manager.py  jsonl_inference.py  litellm_helper.py  logging.py  mock_providers.py  multi_turn_inference.py  ollama_manager.py
llm_eval_backend/tests/: __init__.py  test_config.py  test_llm_judge.py  test_metrics.py  test_metrics_loader.py  test_metrics_nejumi.py  test_new_metrics.py
(+107 files in other folders)
