# use uv

[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "fuzzywuzzy>=0.18.0",
    "litellm==1.68.0",
    "mlflow>=2.21.3",
    "pandas>=2.2.3",
    "uvicorn>=0.34.2",
    "tenacity>=8.2.3",
    "redis>=5.0.1",
    "sacrebleu>=2.3.1",
    "python-levenshtein>=0.21.1",
    "pydantic-settings>=2.9.1",
    "python-multipart>=0.0.20",
    "httpx>=0.24.0",
    "scipy>=1.14.1",
#    "bert-score>=0.3.13",
    "unbabel-comet>=2.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]